# crossterm-keybind

./: Cargo.toml  README.md  flake.nix
.github/workflows/: lint.yml  msrv.yml  release.yml  test.yml  typo.yml
crossterm-keybind/: Cargo.toml
crossterm-keybind-core/: Cargo.toml
crossterm-keybind-core/src/: lib.rs
crossterm-keybind-derive/: Cargo.toml
crossterm-keybind-derive/src/: key_bind.rs  lib.rs
crossterm-keybind/src/: error.rs  key_bind.rs  lib.rs  traits.rs
crossterm-keybind/tests/: init_from_table.rs
example/: Cargo.toml
example/src/: main.rs
