[workspace]
resolver = "2"
members = [
    "crossterm-keybind",
    "crossterm-keybind-derive", 
    "example",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Antonio Yang <yanganto@gmail.com>"]
description = "A crossplatform terminal library for keybinds"
repository = "https://github.com/yanganto/crossterm-keybind"
documentation = "https://docs.rs/crossterm-keybind/"
license = "MIT"
keywords = ["event", "keybind", "tui", "crossterm", "ratatui"]
readme = "README.md"
rust-version = "1.85.0"  # 2024 edition
categories = ["command-line-interface", "command-line-utilities"]
