[package]
name = "crossterm-keybind-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = ["crossterm_0_28_1"]
crossterm_0_28_1 = ["dep:crossterm_0_28_1"]
case_ignore = ["str-utils"]

[dependencies]
crossterm_0_28_1 = { package = "crossterm", version = "0.28.1", optional = true, default-features = false, features = ["events"]}
serde ={ version = "1.0", features = ["derive"] } 
str-utils = { version = "0.3.1", optional = true }

[dev-dependencies]
toml = "0.9.10"
