[package]
name = "crossterm-keybind-derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version =  "2.0", features = ["parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
