[package]
name = "crossterm-keybind-derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
crossterm-keybind-core  = { version = "=0.3.0", path = "../crossterm-keybind-core", optional = true }

syn = { version = "2.0", features = ["parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = { version = "1.0", optional = true }
convert_case = "0.10.0"

[features]
default = ["crossterm_0_28_1", "check"]
check = ["crossterm-keybind-core", "serde_json"]
crossterm_0_28_1 = ["crossterm-keybind-core/crossterm_0_28_1"]
