[package]
name = "crossterm-keybind"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = ["crossterm_0_28_1"]
ratatui_0_29_0 = ["dep:crossterm_0_28_1"]
ratatui_0_28_1 = ["dep:crossterm_0_28_1"]
crossterm_0_28_1 = ["dep:crossterm_0_28_1"]
crossterm_0_27 = ["dep:crossterm_0_27"]

[dependencies]
crossterm-keybind-derive  = { version = "=0.0.0", path = "../crossterm-keybind-derive" }

crossterm_0_28_1 = { package = "crossterm", version = "0.28.1", optional = true, default-features = false, features = ["events"]}
crossterm_0_27 = { package = "crossterm", version = "0.27", optional = true, default-features = false, features = ["events"]}

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
toml = "0.9.8"
