[package]
name = "example"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true

[features]
default = ["crossterm-keybind/default"]
slim = ["crossterm-keybind/crossterm_0_29_0", "crossterm-keybind/derive"]

[dependencies]
crossterm-keybind = { version = "=0.3.4", path = "../crossterm-keybind", default-features = false }
serde = { version = "1.0", features = ["derive"] }
